[package]
name = "sqlx_project"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }

# Config
config = "0.14"
dotenvy = "0.15"

# HTTP client (ENGINE)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }